:sparkles: nuevo set de palabras

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       'boeing 747', 'brontosaurio', 'caballito de mar', 'caimán', 'campeón', 'canallita', 'capitán', 'capo', 'caza de combate', 
       'champion', 'chaval', 'chulazo', 'ciclón', 'cogollito', 'coloso', 'coronel', 'crack', 'cuádruple bombo', 'cóndor', 
       'depredador', 'destroyer', 'elemento', 'elfo', 'espectro', 'espía ruso', 'fenómeno', 'fiera', 'figura', 'gacela', 
-      'genio', 'gigante', 'gigante', 'godzilla', 'golfo', 'goliat', 'hacha', 'halcón peregrino', 'helicóptero', 'huracán', 
+      'genio', 'gigante', 'godzilla', 'golfo', 'goliat', 'hacha', 'halcón peregrino', 'helicóptero', 'huracán', 
       'héroe', 'imperturbable', 'incesante', 'inconmensurable', 'inquebrantable', 'jefe', 'johnny bravo', 'kalasnikov', 'killer', 
       'king kong', 'latifundista', 'león', 'lince', 'lobezno', 'machoman', 'maestro', 'majestuoso', 'malote', 'mamotreto', 
       'maquinola', 'mastodonte', 'megalodón', 'ministro', 'mole', 'monster truck', 'mosampo', 'mostrenco', 'mostro', 'máquina', 
@@ -171,7 +171,9 @@
       'semental', 'sempiterno', 'severiano ballesteros', 'sharknado', 'socio', 'sultán', 'superman', 'tanque', 'terminator', 
       'terrateniente', 'terremoto', 'thanos', 'tifón', 'tigre', 'tiranosaurio', 'titán', 'torero', 'tornado', 'tron', 'truhán', 
       'tsunami', 'valiente', 'vaquero', 'velociraptor', 'vikingo', 'vividor', 'víbora', 'willyrex', 'zeus', 'zigurat', 'ídolo', 
-      'ciclogénesis explosiva', 'coronavirus', 'COVID-19', 'bestia parda', 'dromedario'
+      'ciclogénesis explosiva', 'coronavirus', 'COVID-19', 'bestia parda', 'dromedario', 'zagal', 'gulo gulo gulo', 'mecenas', 
+      'guacamayo', 'guacho', 'buenage', 'sánscrito', 'rompecorazones', 'guardameta', 'zaguero', 'charrúa', 'mítico', 'paralelepípedo',
+      'melaza', 'espléndido', 'merengón', 'asintomático', 'DANA', 'encofrador'
     ];
 
     // Randomize adjs
