--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         align-items: center;
         flex-wrap: wrap;
         text-align: center;
-        /* transition: background-color 0.7s ease; */
+        transition: background-color 0.4s ease;
         background-color: #__OG_COLOR__;
       }
 
