--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Get your daily awesome adjective"
     />
     <meta property="og:url" content="https://monstro.vercel.app" />
-    <link rel="shortcut icon" type="image/x-icon" href="/monstro/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <title>Monstro</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
