--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
 
   <body>
     <div id="app">
-      <small class="info bold">Press r to random</small>
+      <small class="info bold">Pulsa r para randomizar</small>
       <div id="clickArea">
         <p>Qué pasa</p>
         <h1 id="value">__OG_ADJ__</h1>
       </div>
       <small class="info"
-        ><a href="https://github.com/pouyio/monstro"
-          >Pull Requests are welcome</a
+        ><a href="https://airtable.com/shrq8Lq602Kw0O1AI"
+          >Sugiere tu adjetivo favorito!</a
         ></small
       >
     </div>
